reboot mode introduced on frontend

--- a/data/a-js-monitor.html
+++ b/data/a-js-monitor.html
@@ -7,7 +7,8 @@
 
 <body>
     <h2 id="titleId"> JavaScript Monitor</h2>
-
+    <button onclick="loadCodeMirror()">Load</button>
+    <button onclick="saveCodeMirror()">Save</button>
     <textarea id="editorId">
     //dynamic loading ...
     {
