--- a/data/aa-js-editor.html
+++ b/data/aa-js-editor.html
@@ -2,6 +2,6 @@
 
 <button onclick="loadMain('a-js-monitor.html', 'aa-js-monitor.html','cyclic-app.js');"><img class="icon" src="./icons/eye.svg" /> JS-Monitor</button>
 <button onclick="loadArticle('a-js-editor.html','test.txt');">Test JS editor only</button>
-<button onclick="loadArticle('a-js-editor.html','init-app.js');">INIT</button>
-<button onclick="loadArticle('a-js-editor.html','cyclic-app.js');">CYCLIC</button>
-<button onclick="loadArticle('a-js-editor.html','exit-app.js');">EXIT</button>
+<button onclick="loadArticle('a-js-editor.html','init-app.js');">Edit INIT</button>
+<button onclick="loadArticle('a-js-editor.html','cyclic-app.js');">Edit CYCLIC</button>
+<button onclick="loadArticle('a-js-editor.html','exit-app.js');">Edit EXIT</button>
