--- a/data/aa-js-monitor.html
+++ b/data/aa-js-monitor.html
@@ -1,10 +1,10 @@
 <h3>JS-Monitor</h3>
 
 <button onclick="loadMain('a-js-editor.html', 'aa-js-editor.html','cyclic-app.js');"><img src="./icons/edit.svg"/> Javascript Editor</button>
-<button onclick="loadArticle('a-js-monitor.html','test.txt');">RESTART INIT</button>
-<button onclick="loadArticle('a-js-monitor.html','init-app.js');">RESTART CYCLIC</button>
-<button onclick="loadArticle('a-js-monitor.html','cyclic-app.js');">Single Run</button>
-<button onclick="loadArticle('a-js-monitor.html','exit-app.js');">Cyclic Run</button>
+<button class="warning" onclick="sendReboot('initboot')">RESTART INIT</button>
+<button class="warning" onclick="sendReboot('cyclicboot')">RESTART CYCLIC</button>
+<button onclick="sendReboot('singlerun')">Single Run</button>
+<button onclick="sendReboot('cyclicrun')">Cyclic Run</button>
 
 <div>
     <fieldset>
