title in config id updated

--- a/data/a-config.html
+++ b/data/a-config.html
@@ -13,8 +13,7 @@
         console.log("param1: ", param1);
     </script>
 
-    <h3 id="h3Id">Actual ... Configurartion</h3>
-
+    <h2 id="titleId">Actual ... Configuration</h2>
 
     <button onclick="loadCodeMirror()">Load</button>
     <button onclick="saveCodeMirror()">Save</button>
