--- a/data/upload.html
+++ b/data/upload.html
@@ -60,11 +60,11 @@
         }
     ]
     </pre>
-    <h2>Actual WLAN Configurartion</h2>
+    <h2>Actual WLAN Configuration</h2>
     <embed type="text/html" src="config_wlan.json" width="400" height="300" style="
     background-color: lightsteelblue;
 ">
-    <h2>Actual MQTT Configurartion</h2>
+    <h2>Actual MQTT Configuration</h2>
     <embed type="text/html" src="config_mqtt.json" width="400" height="300" style="
     background-color: lightsteelblue;
 ">
