--- a/data/index.html
+++ b/data/index.html
@@ -230,7 +230,7 @@
         <ul>
             <li><a onclick="loadMain('a-home.html', 'aa-home.html',0);">Home</a></li>
             <li><a onclick="loadArticle('a-files.html', 'dir');">Files</a></li>
-            <li><a onclick="loadMain('a-js-monitor.html', 'aa-js-monitor.html','test.txtcyclic-app.js');">Javascript</a></li>
+            <li><a onclick="loadMain('a-js-monitor.html', 'aa-js-monitor.html','cyclic-app.js');">Javascript</a></li>
             <li><a onclick="loadMain('a-config.html', 'aa-config.html','config_main.json');">Config</a></li>
             <li><a onclick="loadArticle('a-contact.html');">Contact</a></li>
         </ul>
