--- a/data/a-js-monitor.html
+++ b/data/a-js-monitor.html
@@ -7,8 +7,7 @@
 
 <body>
     <h2 id="titleId"> JavaScript Monitor</h2>
-    <button onclick="loadCodeMirror()">Load</button>
-    <button onclick="saveCodeMirror()">Save</button>
+    <button class="warning" onclick="saveCodeMirror(); sendReboot('cyclicboot');">Save and Restart Cyclic</button>
     <textarea id="editorId">
     //dynamic loading ...
     {
