--- a/data/aa-js-monitor.html
+++ b/data/aa-js-monitor.html
@@ -1,8 +1,8 @@
 <h3>JS-Monitor</h3>
 
 <button onclick="loadMain('a-js-editor.html', 'aa-js-editor.html','cyclic-app.js');"><img src="./icons/edit.svg"/> Javascript Editor</button>
-<button class="warning" onclick="sendReboot('initboot')">RESTART INIT</button>
-<button class="warning" onclick="sendReboot('cyclicboot')">RESTART CYCLIC</button>
+<button class="warning" onclick="sendReboot('initboot')">Execute EXIT-&gt;INIT-&gt;CYCLIC</button>
+<button class="warning" onclick="sendReboot('cyclicboot')">Reload CYCLIC</button>
 <button onclick="sendReboot('singlerun')">Single Run</button>
 <button onclick="sendReboot('cyclicrun')">Cyclic Run</button>
 
