files page restructured

--- a/data/aa-home.html
+++ b/data/aa-home.html
@@ -1,8 +1,7 @@
 <h3>Home-Menu</h3>
 
 <button onclick="loadArticle('a-home.html');"><img class="icon" src="./icons/home.svg" />Home</button>
-<button onclick="loadArticle('dir');">Show files on ESP</button>
-<button onclick="loadArticle('upload');">Upload Page e.g. adopt configuration</button>
+<button onclick="loadArticle('demo.html');">Test Page</button>
 <div>
     <fieldset>
         <legend>Select refresh rate:</legend>
