--- a/data/index.html
+++ b/data/index.html
@@ -228,8 +228,8 @@
     </header>
     <nav>
         <ul>
-            <li class="menu"><a onclick="loadMain('a-home.html', 'aa-home.html',0);">Home</a></li>
-            <li class="menu"><a onclick="loadArticle('a-files.html', 'dir');">Files</a></li>
+            <li class="menu"><a onclick="loadMain('a-home.html', 'aa-home.html');">Home</a></li>
+            <li class="menu"><a onclick="loadMain('a-files.html', 'aa-files.html');">Files</a></li>
             <li class="menu"><a onclick="loadMain('a-js-monitor.html', 'aa-js-monitor.html','cyclic-app.js');">Javascript</a></li>
             <li class="menu"><a onclick="loadMain('a-config.html', 'aa-config.html','config_main.json');">Config</a></li>
             <li class="menu"><a onclick="loadArticle('a-contact.html');">Contact</a></li>
