typo refresh time 0.5s adoptet

--- a/data/aa-home.html
+++ b/data/aa-home.html
@@ -13,7 +13,7 @@
     
         <div>
           <input type="radio" id="fast" name="refresh" checked onClick="changeRefreshRate(500);">
-          <label for="fast">Fast 0.5ms</label>
+          <label for="fast">Fast 0.5s</label>
 
           <input type="radio" id="slow" name="refresh" onClick="changeRefreshRate(2000);">
           <label for="slow">Slow 2s</label>
