pas Rest-Service name "dir "

--- a/data/index.html
+++ b/data/index.html
@@ -229,7 +229,7 @@
     <nav>
         <ul>
             <li class="menu"><a onclick="loadMain('a-home.html', 'aa-home.html');">Home</a></li>
-            <li class="menu"><a onclick="loadMain('a-files.html', 'aa-files.html');">Files</a></li>
+            <li class="menu"><a onclick="loadMain('a-files.html', 'aa-files.html', '/dir');">Files</a></li>
             <li class="menu"><a onclick="loadMain('a-js-monitor.html', 'aa-js-monitor.html','cyclic-app.js');">Javascript</a></li>
             <li class="menu"><a onclick="loadMain('a-config.html', 'aa-config.html','config_main.json');">Config</a></li>
             <li class="menu"><a onclick="loadArticle('a-contact.html');">Contact</a></li>
