--- a/data/reboot.html
+++ b/data/reboot.html
@@ -7,89 +7,56 @@
 
     <style>
         .animation {
-            width: 80px;
-            height: 80px;
+            width: 120px;
+            height: 20px;
             padding: 10px;
-            background-color: blue;
+            background-color: rgb(134, 23, 153);
             position: relative;
             animation-name: animation;
             animation-duration: 3s;
-            animation-iteration-count: 2;
-            border-radius: 80px;
+            animation-iteration-count: 4;
+            border-radius: 20px;
             text-align: center;
+            vertical-align: middle;
         }
-
-        .showDelayed {
-            padding: 10px;
-            animation-name: showDelayed;
-            animation-duration: 6s;
-        }
-
 
         @keyframes animation {
             0% {
-                background-color: blue;
+                background-color: rgb(170, 83, 123);
                 left: 0px;
-                top: 0px;
-                border-radius: 2px;
+                top: 10px;
             }
 
             25% {
-                background-color: yellow;
+                background-color: rgb(207, 207, 122);
                 left: 200px;
                 top: 0px;
-                border-radius: 25px;
             }
 
             50% {
-                background-color: red;
+                background-color: rgb(134, 23, 153);
                 left: 400px;
-                top: 0px;
-                border-radius: 50px;
+                top: 10px;
             }
 
             75% {
-                background-color: green;
+                background-color: rgb(71, 82, 124);
                 left: 200px;
-                top: 0px;
-                border-radius: 25px;
+                top: 20px;
             }
 
             100% {
-                background-color: lightblue;
+                background-color: rgb(232, 89, 170);
                 left: 0px;
-                top: 0px;
-                border-radius: 80px;
+                top: 10px;
             }
         }
 
-        @keyframes showDelayed {
-            0% {
-                background-color: red;
-                visibility: hidden;
-            }
-
-            99% {
-                background-color: yellowe;
-                visibility: hidden;
-            }
-
-            100% {
-                background-color: blue;
-                visibility: show;
-            }
-        }
     </style>
 </head>
 
 <body>
-
-    <h2>Reboot IIoT Demonstrator</h2>
     <div class="animation"> reboot ongoing...</div>
-
-    <h2> Main Page</h2>
-    <div class="showDelayed"> <a href="/">switch to main page</a></div>
-
 </body>
 
 </html>
