Text Avtivate new Configuration adoptet.

--- a/data/aa-config.html
+++ b/data/aa-config.html
@@ -1,6 +1,6 @@
-<h3>Config-Menu</h3>
+<h3>Edit Config Menu</h3>
 
 <button onclick="loadArticle('a-config.html','config_main.json');">Main</button>
 <button onclick="loadArticle('a-config.html','config_wlan.json');">Wifi</button>
 <button onclick="loadArticle('a-config.html','config_mqtt.json');">MQTT</button>
-<button class="warning" onclick="sendReboot('reboot');">Reboot Arduino, e.g. to activate new configuration</button>
+<button class="warning" onclick="sendReboot('reboot');">Activate new configuration (Reboot)</button>
