MAth Functions added, works

--- a/data/aa-home.html
+++ b/data/aa-home.html
@@ -2,6 +2,7 @@
 
 <button onclick="loadArticle('a-home.html');"><img class="icon" src="./icons/home.svg" />Home</button>
 <button onclick="loadArticle('demo.html');">Test Page</button>
+<button onclick="window.open('https://github.com/gfwilliams/tiny-js/blob/wiki/CodeExamples.md','_blank');">JS Help</button>
 <div>
     <fieldset>
         <legend>Select refresh rate:</legend>
