multiple start timer for refresh avoided

--- a/data/index.html
+++ b/data/index.html
@@ -121,6 +121,7 @@
         var fetchUrl;
         var elementId;
         function startTimer(url, id, time) {
+            stopTimer();
             fetchUrl = url;
             elementId = id;
             var i = 0;
@@ -139,7 +140,7 @@
         //change refreshRate
         function changeRefreshRate(time) {
             console.log(time);
-            clearInterval(timerId);
+            stopTimer();
             if (time > 0) {
                 startTimer(fetchUrl, elementId, time);
             }
@@ -230,8 +231,10 @@
         <ul>
             <li class="menu"><a onclick="loadMain('a-home.html', 'aa-home.html');">Home</a></li>
             <li class="menu"><a onclick="loadMain('a-files.html', 'aa-files.html', '/dir');">Files</a></li>
-            <li class="menu"><a onclick="loadMain('a-js-monitor.html', 'aa-js-monitor.html','cyclic-app.js');">Javascript</a></li>
-            <li class="menu"><a onclick="loadMain('a-config.html', 'aa-config.html','config_main.json');">Config</a></li>
+            <li class="menu"><a
+                    onclick="loadMain('a-js-monitor.html', 'aa-js-monitor.html','cyclic-app.js');">Javascript</a></li>
+            <li class="menu"><a onclick="loadMain('a-config.html', 'aa-config.html','config_main.json');">Config</a>
+            </li>
             <li class="menu"><a onclick="loadArticle('a-contact.html');">Contact</a></li>
         </ul>
 
