--- a/data/index.html
+++ b/data/index.html
@@ -252,7 +252,7 @@
     </main>
 
     <footer>
-        <p id="pFooter">&copy;&nbsp;Copyright 2023 by avm. All rights reversed.</p>
+        <p id="pFooter">&copy;&nbsp;Copyright 2023 by avm. All rights reserved.</p>
     </footer>
 
 </body>
